# ToDo-List

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  main_config.py  pyproject.toml
comments/: .env  Makefile  config.py  database.py  external_backend.py  main.py  mydb.db  pyproject.toml  redis.py
comments/alembic/: env.py
comments/alembic/versions/: 2025_03_02_1302-1a227e3758b6_initial.py
comments/app/: crud.py  routers.py  schemas.py
comments/app/models/: comment_models.py
main_backend/: pyproject.toml
main_backend/tags/: admin.py  models.py  views.py
main_backend/tags/migrations/: 0001_initial.py  0002_alter_tag_id.py  0003_alter_tag_id.py
main_backend/tasks/: models.py  serializers.py  urls.py  views.py
main_backend/tasks/migrations/: 0001_initial.py  0004_alter_task_id.py
main_backend/todo_list/: permissions.py  settings.py  urls.py  views.py
main_backend/users/: models.py  views.py
main_backend/users/migrations/: 0001_initial.py  0002_alter_customuser_id.py
main_backend/utils/: unique_id_creation.py
tags/: models.py  serializers.py  urls.py  views.py
tasks/: models.py
tasks/migrations/: 0002_alter_task_description.py  0003_alter_task_id.py
todo_list/: settings.py  urls.py
todo_list/todo_list/: settings.py
users/: admin.py  models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
utils/: unique_id_creation.py
