[project]
name = "comments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.115.8",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
    "ruff>=0.9.9",
    "sqlalchemy[asyncio]>=2.0.38",
    "uvicorn>=0.34.0",
]
